# SmogNet

./: .gitignore  404.html  LICENSE  README.md  dehazing.ipynb  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
docs/: api.md  index.md  ui.md
notebooks/: classification.ipynb  dehazing.ipynb  detection.ipynb
search/: search_index.json
src/inference/: dehazer.py  object_detector.py  pipeline.py  smog_classifier.py
src/widgets/: __init__.py  button.py  image_container.py  label.py
ui/: index.html
