[project]
name = "smognet"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.7",
    "kaggle>=2.1.2",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "scikit-learn>=1.8.0",
    "tensorflow-macos>=2.16.2; sys_platform == 'macos'",
    "tensorflow-metal>=1.2.0; sys_platform == 'macos'",
    "tensorflow; sys_platform != 'macos'",
]
